add scenario-based strategy pattern solution